--- a/app/stylesheets/pattern-lib/_grids.scss
+++ b/app/stylesheets/pattern-lib/_grids.scss
@@ -19,7 +19,6 @@ body {
 
 .xpl-page-content {
 	@include box-sizing(border-box);
-	min-height: calc(100% - 3.4rem);
 }
 
 .xpl-content-wrapper {
@@ -41,7 +40,7 @@ body {
 	display: block;
 	width: 100%;
 	height: 480px;
-	height: calc(100vh - 78px - 3.4rem);
+	height: calc(100vh - 138px);
 	border: 0;
 }
 
